--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,13 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "import/no-extraneous-dependencies": [
+            "off", {
+                "devDependencies": false, 
+                "optionalDependencies": false, 
+                "peerDependencies": false
+                }
+            ]
     }
 }
