--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "homepage": "https://github.com/momoasalu/weather-app#readme",
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "prettier": "3.0.3",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0"
   }
 }
